--- a/inc/css/iot.css
+++ b/inc/css/iot.css
@@ -112,6 +112,8 @@ aside .title{
 aside ul{border-top:1px solid #f0f2f4;}
 aside li{line-height:78px;border-bottom:1px solid #f0f2f4;}
 aside li a{display:block;padding-left:40px;}
+aside li a:hover{color:#305c92;}
+aside li a.active{color:#305c92;}
 
 /* main */
 .main_visual{position:relative;top:0%;left:0%;width:100%;height:350px;background:url(../../images/visual_main.jpg) no-repeat center;background-size:cover;}
@@ -141,6 +143,17 @@ aside li a{display:block;padding-left:40px;}
 .sub_contents{
 	height:100%;
 	margin-left:240px;
+	overflow:hidden;
+	background-color:#ffffff;
+}
+.sub_contents .inner{
+	margin:90px 50px 0px 50px;
+}
+
+/* side 메뉴 있는 내용 박스 */
+.sub_contents_full{
+	height:100%;
+	margin:90px 10px 0px 10px;
 	overflow:hidden;
 	background-color:#ffffff;
 }
