--- a/inc/css/iot.css
+++ b/inc/css/iot.css
@@ -51,6 +51,15 @@ button.white{
 	font-family:'Nanum Barun Gothic';
 	cursor:pointer;
 }
+button.blue{
+	min-width:200px;height:42px;
+	border:0px;
+	color:#ffffff;
+	background-color:#007acc;
+	font-size:18px;
+	font-family:'Nanum Barun Gothic';
+	cursor:pointer;
+}
 /* layout */
 header,footer{display:block;width:100%;z-index:10;overflow:hidden;}
 header{position:fixed;top:0px;padding-bottom:8px;background:url(../../images/bg_nav_header.png) repeat-x bottom;min-width:1024px;}
@@ -176,8 +185,13 @@ aside li a.active{color:#305c92;font-weight:bold;}
 	overflow:hidden;
 	margin:0px 10px 0px 10px;
 }
+.sub_title_img{
+	position:absolute;top:0px;right:0px;z-index:1;
+	width:224px;height:139px;
+	background:url(../../images/bg_body_img.png) no-repeat;
+}
 
-
+.sub_title_black{display:block;position:relative;top:0%;left:0%;padding-bottom:38px;font-size:36px;font-weight:bold;}
 .sub_title_blue{font-size:36px;font-weight:bold;color:#007acc;}
 .sub_title_description{font-size:20px;margin-top:18px;}
 
@@ -196,8 +210,34 @@ ul.blue_dot li:before{content:"•";color:#007acc; position:absolute; left:0em; 
 table.form{width:100%;border-top:1px solid #f0f2f4;margin-bottom:30px;}
 table.form td{min-height78px;padding:20px 0px 20px 0px;border-bottom:1px solid #f0f2f4;font-size:16px;color:#010101;}
 table.form td.title{width:200px;font-size:18px;}
+table.form td.title .red{color:#ff0000;}
 table.form label{margin:0px 20px 0px 10px;}
 table.form .input_wrap{margin-right:30px;}
+
+.bbs_search{position:relative;top:0%;left:0%;height:69px;border:1px solid #f0f2f4;overflow:hidden;margin-bottom:30px;}
+.bbs_search .input_wrap{margin-right:72px;height:36px;border-right:1px solid #b7b7b7;margin-top:8px;}
+.bbs_search .input_wrap input{border:0px;padding:20px 0px 20px 0px;margin:0px 10px 0px 10px;font-size:13px;}
+.bbs_search .submit{display:block;position:absolute;top:0px;right:0px;width:62px;height:100%;background:url(../../images/bg_icon_search_02.png) no-repeat center;border:0px;cursor:pointer;}
+.bbs_search .submit2{background:url(../../images/bg_icon_search_03.png) no-repeat center;}
+
+.bbs_list{position:relative;top:0%;left:0%;border-top:1px solid #f1f3f4;}
+.bbs_list .rows{border-bottom:1px solid #f1f3f4;}
+.bbs_list .rows a{display:block;position:relative;top:0%;left:0%;padding:30px 0px 30px 0px;font-size:18px;}
+.bbs_list .rows label{display:block;position:absolute;top:30px;left:0%;width:57px;height:24px;}
+.bbs_list .rows label.notice{background:url(../../images/bg_icon_board_en_notice_off.png) no-repeat center;}
+.bbs_list .rows .icon{display:block;position:absolute;top:30px;right:0%;width:140px;min-height:19px;background:url(../../images/btn_plus_s_off.png) no-repeat right;}
+.bbs_list .rows .title{display:block;margin:0px 150px 0px 77px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;}
+.bbs_list .more{text-align:center;margin-top:30px;font-size:16px;line-height:160%;}
+.bbs_list .more a{display:block;width:60px;padding-top:35px;background:url(../../images/btn_more_02.png) no-repeat top;margin:0px auto;}
+.bbs_list .rows .detail{margin-top:20px;padding-left:77px;margin-bottom:50px;position:relative;top:0%;left:0%;}
+.bbs_list .rows .detail label{top:0%;left:0%;}
+#bbs_detail{display:none;}
+
+.area_files{margin:50px 0px 50px 0px;position:relative;top:0%;left:0%;border-top:1px dotted #000000;}
+.area_files .rows{position:relative;top:0%;left:0%;border-bottom:1px dotted #000000;padding:30px 0px 30px 0px;font-size:16px;}
+.area_files .rows label{position:absolute;top:30px;left:0%;}
+.area_files .rows button{position:absolute;top:25px;right:0%;min-width:150px;height:26px;font-size:16px;font-weight:bold;border:2px solid #305c92;color:#305c92;}
+.area_files .rows .file{display:block;margin:0px 170px 0px 100px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;}
 
 
 .facility_tab{position:relative;top:0%;left:0%;height:70px;text-align:center;border-left:1px solid #b7b7b7;border-bottom:1px solid #b7b7b7;margin-bottom:30px;}
@@ -245,65 +285,61 @@ table.form .input_wrap{margin-right:30px;}
 
 .DevicesApps_list .more{display:block;float:left;width:100%;height:69px;line-height:69px;border:1px solid #e1e1e1;font-size:18px;font-weight:bold;color:#b2b2c2;background-color:#ffffff;text-align:center;}
 
-.DevicesApps_Detail{background-color:#ffffff;border:1px solid #e1e1e1;}
-.DevicesApps_Detail .rows{border-bottom:1px solid #e1e1e1;}
-.DevicesApps_Detail .area_images{margin:30px;position:relative;top:0%;left:0%;}
-.DevicesApps_Detail .area_images .big_img{width:500px;height:500px;margin:0px auto;text-align:center;margin-bottom:30px;}
-.DevicesApps_Detail .area_images .big_img img{vertical-align:middle;max-width:100%;max-height:100%;}
-.DevicesApps_Detail .area_images .small_img{position:absolute;top:0px;right:100px;width:80px;}
-.DevicesApps_Detail .area_images .small_img li{width:100%;height:80px;margin-bottom:10px;}
-.DevicesApps_Detail .area_images .small_img li a{display:block;height:100%;border:1px solid #e1e1e1;text-align:center;}
-.DevicesApps_Detail .area_images .small_img li a.active{border:2px solid #007acc;text-align:center;}
-.DevicesApps_Detail .area_images .small_img li img{vertical-align:middle;max-width:95%;max-height:95%;}
-.DevicesApps_Detail .area_images .title{display:block;font-size:30px;margin-bottom:40px;text-align:center;}
-.DevicesApps_Detail .area_images .caption{display:block;font-size:16px;margin-bottom:100px;text-align:center;color:#010101;}
+.Detail_full{position:relative;top:0%;left:0%;z-index:5;background-color:#ffffff;border:1px solid #e1e1e1;}
+.Detail_full .rows{border-bottom:1px solid #e1e1e1;}
+.Detail_full .area_images{margin:30px;position:relative;top:0%;left:0%;}
+.Detail_full .area_images .big_img{width:500px;height:500px;margin:0px auto;text-align:center;margin-bottom:30px;}
+.Detail_full .area_images .big_img img{vertical-align:middle;max-width:100%;max-height:100%;}
+.Detail_full .area_images .small_img{position:absolute;top:0px;right:100px;width:80px;}
+.Detail_full .area_images .small_img li{width:100%;height:80px;margin-bottom:10px;}
+.Detail_full .area_images .small_img li a{display:block;height:100%;border:1px solid #e1e1e1;text-align:center;}
+.Detail_full .area_images .small_img li a.active{border:2px solid #007acc;text-align:center;}
+.Detail_full .area_images .small_img li img{vertical-align:middle;max-width:95%;max-height:95%;}
+.Detail_full .area_images .title{display:block;font-size:30px;margin-bottom:40px;text-align:center;}
+.Detail_full .area_images .caption{display:block;font-size:16px;margin-bottom:100px;text-align:center;color:#010101;}
 
-.DevicesApps_Detail .area_description{margin:100px;position:relative;top:0%;left:0%;}
-.DevicesApps_Detail .area_description .title{display:block;font-size:30px;margin-bottom:30px;}
-.DevicesApps_Detail .area_description .caption{display:block;width:100%;font-size:16px;overflow-x:auto;overflow-y:hidden;}
-
-.DevicesApps_Detail .area_files{margin:50px 100px 50px 100px;position:relative;top:0%;left:0%;border-top:1px dotted #000000;}
-.DevicesApps_Detail .area_files .rows{position:relative;top:0%;left:0%;border-bottom:1px dotted #000000;padding:30px 0px 30px 0px;font-size:16px;}
-.DevicesApps_Detail .area_files .rows label{position:absolute;top:30px;left:0%;}
-.DevicesApps_Detail .area_files .rows button{position:absolute;top:25px;right:0%;min-width:150px;height:26px;font-size:16px;font-weight:bold;border:2px solid #305c92;color:#305c92;}
-.DevicesApps_Detail .area_files .rows .file{display:block;margin:0px 170px 0px 100px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;}
-
-.DevicesApps_Detail .area_related{margin:100px 40px 100px 40px;position:relative;top:0%;left:0%;}
-.DevicesApps_Detail .area_related .title{display:block;font-size:30px;margin-left:60px;margin-bottom:40px;}
-.DevicesApps_Detail .area_related .caption{position:relative;top:0%;left:0%;display:block;height:350px;font-size:16px;margin-bottom:100px;}
-.DevicesApps_Detail .area_related .caption a.prev{display:block;position:absolute;top:50%;left:0%;margin-top:-14px;width:20px;height:39px;background:url(../../images/btn_arrow_left_02_off.png) no-repeat center;}
-.DevicesApps_Detail .area_related .caption a.next{display:block;position:absolute;top:50%;right:0%;margin-top:-14px;width:20px;height:39px;background:url(../../images/btn_arrow_right_02_off.png) no-repeat center;}
-.DevicesApps_Detail .area_related .caption .items{height:100%;margin:0px 30px 0px 30px;overflow:hidden;}
-.DevicesApps_Detail .area_related .caption .items .list{float:left;width:200%;}
-.DevicesApps_Detail .area_related .caption .items .list li{float:left;width:273px;height:350px;margin-right:9px;text-align:center;}
-
-.DevicesApps_Detail .area_related .caption .items .list li .item{width:271px;height:348px;border:1px solid #e1e1e1;overflow:hidden;background-color:#ffffff;}
-.DevicesApps_Detail .area_related .caption .items .list li .photo{height:219px;overflow:hidden;text-align:center;background-color:#fcfcfc;}
-.DevicesApps_Detail .area_related .caption .items .list li .photo img{vertical-align:middle;max-width:100%;max-height:100%;}
-.DevicesApps_Detail .area_related .caption .items .list li .label{height:129px;text-align:center;}
-.DevicesApps_Detail .area_related .caption .items .list li .label p{margin:30px 10px 0px 10px;display:block;font-size:14px;line-height:160%;}
-.DevicesApps_Detail .area_related .caption .items .list li .label p b{display:block;font-size:18px;margin-bottom:10px;line-height:100%;}
-
-.DevicesApps_Detail .area_bbs{position:relative;top:0%;left:0%;}
-.DevicesApps_Detail .area_bbs .tab{position:relative;top:0%;left:0%;height:77px;text-align:center;border-bottom:1px solid #e1e1e1;}
-.DevicesApps_Detail .area_bbs .tab a.item{display:block;float:left;width:50%;height:76px;line-height:76px;font-size:30px;color:#b2b2c2;border-top:0px solid #e1e1e1;background-color:#ffffff;font-weight:bold;}
-.DevicesApps_Detail .area_bbs .tab a.item.active{border-top:3px solid #305c92;height:75px;line-height:75px;color:#305c92;}
-.DevicesApps_Detail .area_bbs .tab a.item .border{display:block;height:100%;border-right:1px solid #b7b7b7;}
-.DevicesApps_Detail .area_bbs .lists{margin:50px 100px 50px 100px;}
-
-.DevicesApps_Detail .area_registe{position:relative;top:0%;left:0%;margin:70px 100px 70px 100px;}
+.Detail_full .area_description{margin:100px;position:relative;top:0%;left:0%;}
+.Detail_full .area_description .title{display:block;font-size:30px;margin-bottom:30px;}
+.Detail_full .area_description .caption{display:block;width:100%;font-size:16px;overflow-x:auto;overflow-y:hidden;}
 
 
-.bbs_search{position:relative;top:0%;left:0%;height:69px;border:1px solid #f0f2f4;overflow:hidden;margin-bottom:30px;}
-.bbs_search .input_wrap{margin-right:72px;height:36px;border-right:1px solid #b7b7b7;margin-top:8px;}
-.bbs_search .input_wrap input{border:0px;padding:20px 0px 20px 0px;margin:0px 10px 0px 10px;font-size:13px;}
-.bbs_search .submit{display:block;position:absolute;top:0px;right:0px;width:62px;height:100%;background:url(../../images/bg_icon_search_02.png) no-repeat center;border:0px;cursor:pointer;}
 
-.bbs_list{position:relative;top:0%;left:0%;border-top:1px solid #f1f3f4;}
-.bbs_list .rows{position:relative;top:0%;left:0%;border-bottom:1px solid #f1f3f4;padding:30px 0px 30px 0px;font-size:18px;}
-.bbs_list .rows label{display:block;position:absolute;top:27px;left:0%;width:57px;height:24px;}
-.bbs_list .rows label.notice{background:url(../../images/bg_icon_board_en_notice_off.png) no-repeat center;}
-.bbs_list .rows .icon{display:block;position:absolute;top:30px;right:0%;width:140px;min-height:19px;background:url(../../images/btn_plus_s_off.png) no-repeat right;}
-.bbs_list .rows .title{display:block;margin:0px 150px 0px 77px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;word-wrap:normal;}
-.bbs_list .more{text-align:center;margin-top:30px;font-size:16px;line-height:160%;}
-.bbs_list .more a{display:block;width:60px;padding-top:35px;background:url(../../images/btn_more_02.png) no-repeat top;margin:0px auto;}
+.Detail_full .area_files{margin:50px 100px 50px 100px;position:relative;top:0%;left:0%;border-top:1px dotted #000000;}
+
+.Detail_full .area_related{margin:100px 40px 100px 40px;position:relative;top:0%;left:0%;}
+.Detail_full .area_related .title{display:block;font-size:30px;margin-left:60px;margin-bottom:40px;}
+.Detail_full .area_related .caption{position:relative;top:0%;left:0%;display:block;height:350px;font-size:16px;margin-bottom:100px;}
+.Detail_full .area_related .caption a.prev{display:block;position:absolute;top:50%;left:0%;margin-top:-14px;width:20px;height:39px;background:url(../../images/btn_arrow_left_02_off.png) no-repeat center;}
+.Detail_full .area_related .caption a.next{display:block;position:absolute;top:50%;right:0%;margin-top:-14px;width:20px;height:39px;background:url(../../images/btn_arrow_right_02_off.png) no-repeat center;}
+.Detail_full .area_related .caption .items{height:100%;margin:0px 30px 0px 30px;overflow:hidden;}
+.Detail_full .area_related .caption .items .list{float:left;width:200%;}
+.Detail_full .area_related .caption .items .list li{float:left;width:273px;height:350px;margin-right:9px;text-align:center;}
+
+.Detail_full .area_related .caption .items .list li .item{width:271px;height:348px;border:1px solid #e1e1e1;overflow:hidden;background-color:#ffffff;}
+.Detail_full .area_related .caption .items .list li .photo{height:219px;overflow:hidden;text-align:center;background-color:#fcfcfc;}
+.Detail_full .area_related .caption .items .list li .photo img{vertical-align:middle;max-width:100%;max-height:100%;}
+.Detail_full .area_related .caption .items .list li .label{height:129px;text-align:center;}
+.Detail_full .area_related .caption .items .list li .label p{margin:30px 10px 0px 10px;display:block;font-size:14px;line-height:160%;}
+.Detail_full .area_related .caption .items .list li .label p b{display:block;font-size:18px;margin-bottom:10px;line-height:100%;}
+
+.Detail_full .area_bbs{position:relative;top:0%;left:0%;}
+.Detail_full .area_bbs .tab{position:relative;top:0%;left:0%;height:77px;text-align:center;border-bottom:1px solid #e1e1e1;}
+.Detail_full .area_bbs .tab a.item{display:block;float:left;width:50%;height:76px;line-height:76px;font-size:30px;color:#b2b2c2;border-top:0px solid #e1e1e1;background-color:#ffffff;font-weight:bold;}
+.Detail_full .area_bbs .tab a.item.active{border-top:3px solid #305c92;height:75px;line-height:75px;color:#305c92;}
+.Detail_full .area_bbs .tab a.item .border{display:block;height:100%;border-right:1px solid #b7b7b7;}
+.Detail_full .area_bbs .lists{margin:50px 100px 50px 100px;}
+
+.Detail_full .area_registe{position:relative;top:0%;left:0%;margin:70px 100px 70px 100px;}
+
+.Detail_full .area_member{margin:70px 100px 100px 100px;font-size:16px;}
+.Detail_full .area_member a.line{color:#0000ff;text-decoration:underline;}
+.Detail_full .area_member .form_box{position:absolute;top:68px;right:100px;width:300px;}
+.Detail_full .area_member .rows{margin-bottom:20px;border:0px;}
+.Detail_full .area_member .rows .label{display:block;font-size:18px;margin-bottom:10px;}
+.Detail_full .area_member .rows .input{margin-right:20px;}
+
+.Detail_full .area_member .tab{position:relative;top:0%;left:0%;height:70px;text-align:center;border-left:1px solid #b7b7b7;border-bottom:1px solid #b7b7b7;margin-bottom:50px;}
+.Detail_full .area_member .tab a.item{display:block;float:left;width:175px;height:69px;line-height:69px;font-size:18px;color:#b2b2c2;border-top:1px solid #b7b7b7;border-right:1px solid #b7b7b7;background-color:#ffffff;font-weight:bold;}
+.Detail_full .area_member .tab a.item.active{border-top:3px solid #305c92;height:68px;line-height:68px;color:#305c92;}
+
+
