--- a/inc/css/iot.css
+++ b/inc/css/iot.css
@@ -38,35 +38,39 @@ ol,ul{list-style: none;margin:0px;padding:0px;}
 	filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
 	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
 }
+
+.pop{
+	position:fixed;top:50%;left:50%;z-index:120;
+	background-color:#ffffff;
+	padding:30px;
+}
+.pop a.close{
+	position:absolute;top:30px;right:30px;display:block;width:39px;height:39px;background:url(../../images/pop_btn_close.png);
+}
+
 img.trick{height:100%;width:0px;overflow:hidden;vertical-align:middle;}
 
 select{min-width:200px;padding:5px 10px 5px 10px;font-size:16px;border:1px solid #b7b7b7;color:#010101;}
 input[type="text"],textarea{min-width:100%;padding:9px 10px 10px 9px;font-size:16px;border:1px solid #b7b7b7;color:#010101;vertical-align:middle;}
+button{font-family:'Nanum Barun Gothic';cursor:pointer;border:0px;}
 button.white{
 	width:200px;height:50px;
 	border:4px solid #007acc;
 	color:#007acc;
 	background-color:#ffffff;
 	font-size:18px;
-	font-family:'Nanum Barun Gothic';
-	cursor:pointer;
 }
 button.blue{
 	width:200px;height:50px;
-	border:0px;
 	color:#ffffff;
 	background-color:#007acc;
 	font-size:18px;
-	font-family:'Nanum Barun Gothic';
-	cursor:pointer;
 }
 button.gray{
 	width:120px;height:40px;
 	border:2px solid #b7b7b7;
 	background-color:#ffffff;
 	font-size:16px;
-	cursor:pointer;
-	font-family:'Nanum Barun Gothic';
 }
 /* layout */
 header,footer{display:block;width:100%;z-index:10;overflow:hidden;}
