--- a/inc/css/iot_1700px.css
+++ b/inc/css/iot_1700px.css
@@ -2,6 +2,11 @@
 
 /* 상단 네비 */
 header #header nav{width:800px;}
+header #header nav li.item1{width:150px;}
+header #header nav li.item2{width:200px;}
+header #header nav li.item3{width:200px;}
+header #header nav li.item4{width:150px;}
+header #header nav li.item5{width:100px;}
 
 /* 메인 상품 */
 .main_contents{max-width:1620px;}
